[project]
name = "fewtilities"

#  This is the version of the collection. Each utility has its own version.
version = "2025.05.1"

description = 'A few utilities'
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

